# starter-reasonml

./: .gitignore  Makefile  README.md  dune  dune-project  index.css  index.html  package-lock.json  package.json  project.opam  rollup.config.mjs  vite.config.js
public/: index.css  index.html
src/client/: dune
src/components/: App.re
src/server/: dune
src/types/: country.re
