(dirs :standard \ node_modules)

(alias
 (name all)
 (deps
  (alias_rec vite)))

(melange.emit
 (target client)
 (alias client)
 (libraries client)
 (module_systems
  (es6 mjs)))

(rule
 (alias vite)
 (targets
  (dir dist-client))
 (deps
  (alias_rec client)
  (:public
   (glob_files public/*))
  (:vite ./vite.config.js))
 (action
  (system "../../node_modules/.bin/vite build"))
 (mode
  (promote (until-clean))))

(melange.emit
 (target server)
 (alias server)
 (libraries server)
 (module_systems
  (es6 mjs)))

(rule
 (alias vite)
 (targets
  (dir dist-server))
 (deps
  (alias_rec server)
  (:rollup ./rollup.config.mjs))
 (action
  (system "../../node_modules/.bin/rollup --config"))
 ; (action
 ;  (system "cp -R ./server ./dist-server"))
 (mode
  (promote (until-clean))))
